# json-fmt

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build.yml  docs.yml  validate.yml
docs/source/: conf.py  index.rst
json_fmt/: cli.py
json_lint_tools/: __init__.py
tests/: test_dummy.py
tests/jsonfiles/: one_line_obj.json  root_array.json  test.json
