[tool.poetry]
name = "json-fmt"
version = "0.1.0"
description = "Lints, formats, and diffs JSON files"
authors = ["Mathew Moon <me@mathewmoon.net>"]
readme = "README.md"
homepage = "https://github.com/mathewmoon/json-linter"
documentation = "https://github.com/mathewmoon/json-linter"
packages = [{include = "json_fmt", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"

[tool.pytest.ini_options]
xfail_strict = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jsonfmt = "json_fmt.cli:main"